--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ html, body {
 	height: 100%;
 }
 body {
-  	font-family: "Lato", Helvetica, Arial, sans-serif;
+  	font-family: "Lato",'微软雅黑', Helvetica, Arial, sans-serif;
 	font-weight: 300;
 	font-size: 16px;
 	color: #555;
@@ -220,8 +220,38 @@ a:before, a:after {
 /* ==========================================================================
    Wrap Sections
    ========================================================================== */
+#myCarousel .carousel-inner .item img {
+	width: 100%;
+}
+#myCarousel .icon-prev,#myCarousel .icon-next{
+/*	font-size: 5em;
+	top: 50%;
+	margin-top: -2em;*/
+	/*border: 1px solid  red;*/
+	 position: absolute;
+    height: 80px;
+    line-height: 55px;
+    width: 50px;
+    font-size: 100px;
+    text-align: center;
+    color: #fff;
+    top: 50%;
+    z-index: 4;
+    margin-top: -25px;
+    cursor: pointer;
+    opacity: .7;
+    transition: all 150ms;
+}
+#myCarousel .icon-prev{
+	left: 0;
+}
+#myCarousel .icon-next{
+    right: 0;
+    /*left: 50%*/
+}
 
-#headerwrap {
+/*===============headerwrap==============*/
+/*#headerwrap {
 	background: url(../img/header_bg.jpg) no-repeat center top;
 	padding-top: 100px;
 	text-align: center;
@@ -240,6 +270,7 @@ a:before, a:after {
 	padding-bottom: 100px;
 	margin-top: 70px;
 }
+
 #headerwrap h1 {
 	color: #fff;
 	font-size: 50px;
@@ -269,7 +300,9 @@ a:before, a:after {
 	background-color: #fff;
 	outline: 0px;
 	border: 1px solid #fff;
-}
+}*/
+/*=============================*/
+
 #about {
 	background: #fff;
 	padding-top: 80px;
@@ -281,13 +314,15 @@ a:before, a:after {
 	margin-top: 0;
 	border-radius: 10%;
 }
+#about h3{
+	color: #3f9dad;
+}
 
 /*banner*/
 /*=====================*/
 .yx-rotaion a,img{border:0;}
-
 /*yx_rotaion*/
-.yx-rotaion{ margin-top: 10%; margin-right: auto; margin-bottom: 0; margin-left: auto; }
+.yx-rotaion{ margin-top: 5%; margin-right: auto; margin-bottom: 0; margin-left: auto; }
 .yx-rotaion-btn,.yx-rotaion-title,.yx-rotation-focus,.yx-rotation-t,.yx-rotaion-btn{position:absolute}
 .yx-rotation-title{position:absolute;width:100%;height:40px;line-height:40px;background:#000;filter:alpha(opacity=40);-moz-opacity:0.4;-khtml-opacity:0.4;opacity:0.4;left:0;bottom:0;_bottom:-1px;z-index:1}
 .yx-rotation-t{color:#fff;font-size:16px;font-family:microsoft yahei;z-index:2;bottom:0;left:10px;line-height:40px}
@@ -332,17 +367,37 @@ a:before, a:after {
 	text-align: center;
 	color: #fff;
 }
-#news H2 {
+#news H2,#news H3 {
 	color: #fff;
+	margin-top: 0;
 }
-#news H3 {
-	color: #fff;
+#news .btn{
+	margin-top: 20px;
 }
+/*====list-group=====*/
+#news #lista{
+	margin-top: 8%;
+}
+.list-group-item {
+  background-color: #239cb1;
+  border: none;
+}
+#news a{
+	color: white;
+}
+#news a:hover{
+	color: #239cb1;
+}
+/*==================*/
+
 #team {
 	background: url(../img/bg.jpg) no-repeat center center fixed;
 	padding: 60px 0;
-	text-align: center;
+	/*text-align: center;*/
 	background-size: cover;
+}
+#team p{
+	text-align: left;
 }
 #team hr {
 	display: block;
@@ -377,7 +432,7 @@ a:before, a:after {
 #team .btn{
 	font-weight: 500;
 	font-size: 18px;
-	margin-top: 50px;
+	margin-top: 20px;
 	background-color: #3ab7cb;
 	color: #fff;
 	border: 0;
